--- a/0316.md
+++ b/0316.md
@@ -30,9 +30,13 @@ a complex adaptive system is .... which has 5 different features, difficulties t
 Ruler of Ethiopia uptill it was overthown in 1974. Owen uses Kapuscinski to help his understanding of the three countries that he mentioned throughout his talk. Kapuscinski's work helped Owen viewed why development is not shown in these countries, which can be caused by political and social threats that is not shown in economic models. This supports Owen's idea of how economic models hides such factors, and how economic development is not something that can be simply measured. 
 
 # Why does Barder recommend resisting engineering as a policy implication?  What did he mean by iso-morphic mimicry?
+The soap example, a room of engineer failed to acheieve. Engineering is created when the enivornment are set at constant, which is impossible in a real world. Stuff that cause enviornment change can be temperture, or chemical reactions. These which are all unpredictable and uncontrollable. Engineer will not be able to solve this problem easily. Iso-morphic is when it's easy to create something that look alike and achieve what one want it to look like, but not the concept and funcationality behind it.
 
 # What did Barder mean by "resist fatalism"? Who was Norman Borlaug and what is the green revolution?
+Green revolution is to influence the evolutionary process to create a higher yeild and disease resistant wheat varieties. Resist fatalism is to not believe that the outcome process is unavoidable. The green revolution applied changes to the process in order to acheive higher yeild and disease resistant wheat varieties. 
 
 # Barder also recommended to promote innovation, embrace creative destruction and shape development.  What did he mean by these recommendations?
+Though Barber might reject the idea of engineering, but he does not rejct the idea of innovation. Innovation is also a process of human development, innovation happen with increase studies and research. To promote innovation is also to promote development and embrace creativity. Research happen because of curisotiy, which push people to look into the question and the experience.
 
 # Who was Nicholas Georgescu-Roegen and what was his insight about economic systems and evolution?
+Nicholar agruged the value of natural resources when put into use of economic, as these resources will be used up one day. Natural resources is unpredictable, we don't know how much we actually have or when we'll lose it. Putting natural resources inpart of the economic system and evolution makes both of them a unknown time conclusion. We do not know how long it will hold true till we run out of this natural resources.
